# MinderU

./: .gitignore  README.md  pyproject.toml  赛道三：场景攻坚·行业应用转化赛道 - 2026 MinerU 数据智能与前沿语料挑战赛.md
docs/: API.md  DEPLOYMENT.md  HIGH_END_SOLUTION_ROADMAP.md  SAMPLE_EVAL_SUMMARY.md  SUBMISSION_CHECKLIST.md  TECHNICAL_SOLUTION.md
scripts/: run_sample_pipeline.sh
src/minderu/: __init__.py  cli.py  evidence.py  graph.py  schema.py  utils.py  xlsx_reader.py
src/minderu/api/: __init__.py  server.py
src/minderu/chunking/: __init__.py  semantic.py
src/minderu/eval/: metrics.py  retrieval.py  samples.py
src/minderu/indexing/: __init__.py  bm25.py  hybrid.py  qdrant_export.py  store.py
src/minderu/parsers/: __init__.py  mineru.py  pdf_text.py
src/minderu/qa/: __init__.py  extractive.py  grounded.py
src/minderu/rerank/: __init__.py
src/minderu/web/: index.html
tests/: test_api_server.py  test_chunking.py  test_document_graph.py  test_evidence.py  test_grounded_answer.py  test_hybrid_index.py  test_mineru_parser.py  test_qdrant_export.py  test_retrieval_eval.py  test_xlsx_reader.py
医疗赛题/相关样例/: README.md
