[project]
name = "minderu"
version = "0.1.0"
description = "Medical PDF to traceable RAG knowledge base, built around MinerU-style structured outputs."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
api = ["fastapi", "uvicorn"]
semantic = ["sentence-transformers", "qdrant-client"]
pdf = ["pymupdf", "pdfplumber"]
dev = ["pytest"]

[project.scripts]
minderu = "minderu.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

